--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </label>
         <nav id = "menu">
             <ul id="header_menu">
-                <a href="./index.html"><img id="logo" src="./img/___ _________free-file.png" alt="Лого" style="width: 120px; margin-right: 20px;"></a>
+                <a href="./index.html"><img id="logo" src="./img/free-file22.png" alt="Лого" style="width: 120px; margin-right: 20px;"></a>
                 <a href="#ourservices"><li>Услуги</li></a> 
                 <a href="#price"><li>Цены</li></a> 
                 <a href="./polezonoe.html"><li>О нас</li></a>
